@@ -170,3 +170,4 @@ Bear traps should break eventually.
 //More color states to silhouette.
 Digging walls should yield stones.
 Abort messages should tell the user to e-mail ivan-users@sourceforge.net. Remember to tell the user to state their version number/OS etc.
+?Zombie flesh should already be spoiled when a zombie dies
