@@ -383,3 +383,5 @@ Deaf state in which the player can't hear explosions, can't converse and in the 
 Explosions should sometimes trigger the deaf state.
 The Cathedral should employ a gardener whose duty is take care of the firs around the building.
 An environmentalist character who would protest outside the Cathedral against the imprisonment of the dolphins.
+Monsters shouldn't drink antidote liquid if they don't need it.
+Ask for auto wear for picked up items.
