@@ -523,6 +523,7 @@
 #define SNOW_PINE 11
 #define SNOW_FIR 12
 #define SNOW_BIRCH 13
+#define ANVIL 13
 
 #define STAIRS_UP 1
 #define STAIRS_DOWN 2
