@@ -1200,7 +1200,7 @@ Dungeon ATTNAM;
 			Size = 7,6;
 			AltarPossible = false;
 			WallSquare = solidterrain(SNOW_TERRAIN),wall(BRICK_FINE);
-			FloorSquare = solidterrain(PARQUET),empty;
+			FloorSquare = STONE solidterrain(FLOOR),empty;
 			GenerateDoor = false;
 			DivineMaster = LORICATUS;
 			GenerateLanterns = false;
@@ -1240,6 +1240,11 @@ Dungeon ATTNAM;
 			Square, Pos 3, 2;
 			{
 				Character = smith { IsMaster = true; }
+			}
+
+			Square, Pos 3, 3;
+			{
+				OTerrain = decoration(ANVIL);
 			}
 		}
 
